--- a/src/assets/output.css
+++ b/src/assets/output.css
@@ -29135,6 +29135,16 @@ video {
   animation: bounce 1s infinite;
 }
 
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 42rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
